--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -20,7 +20,5 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build Compiere Jasper
-      run: mvn -B package --file compiere-jasper-eggo/pom.xml
-    - name: Build Compiere Custo
-      run: mvn -B package --file compiere-custo-eggo/pom.xml
+    - name: Build Smile
+      run: mvn -B package --file pom.xml
