--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <modules>
         <module>compiere-jasper-eurocenter</module>       
         <module>compiere-custo-eurocenter</module>  
-	<module>gwt-custo-eurocenter</module>
+	<module>gwtServer-custo-eurocenter</module>
 	<module>fatjar-custo-eurocenter</module>
 	<module>fatjar-custo-eurocenter-ws</module>
 	<module>compiere-ws-eurocenter</module>
