--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -3,11 +3,12 @@
 
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push]
+
+  #push:
+    #branches: [ main ]
+  #pull_request:
+    #branches: [ main ]
 
 jobs:
   build:
