--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -3,12 +3,13 @@
 
 name: Java CI with Maven
 
-on: [push]
+on: 
+#[push]
 
-  #push:
-    #branches: [ main ]
-  #pull_request:
-    #branches: [ main ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
@@ -22,4 +23,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build Smile
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file compiere-jasper-eurocenter/pom.xml
