--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -23,4 +23,10 @@ jobs:
       with:
         java-version: 1.8
     - name: Build Smile
-      run: mvn -B package --file compiere-custo-eurocenter/pom.xml
+      run: mvn -B package --file gwtServer-custo-eurocenter/pom.xml
+#compiere-custo-eurocenter
+#compiere-jasper-eurocenter
+#compiere-ws-eurocenter
+#fatjar-custo-eurocenter
+#fatjar-custo-eurocenter-ws
+#gwtServer-custo-eurocenter
