--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -29,7 +29,7 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build Smile
-      run: mvn -B package --file fatjar-custo-eurocenter/pom.xml
+      run: mvn -B package --file pom.xml
 #compiere-custo-eurocenter
 #compiere-jasper-eurocenter
 #gwtServer-custo-eurocenter
