--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -29,10 +29,7 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build Smile
-      run: mvn -B package --file pom.xm
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1²
-    - run: mvn --batch-mode --update-snapshots verify
+      run: mvn -B package --file pom.xml
     - run: mkdir staging && cp target/*.jar staging
     - uses: actions/upload-artifact@v2
       with:
