--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -29,7 +29,8 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build Smile
-      run: mvn -B package --file pom.xml
+      run: mvn --batch-mode --update-snapshots verify
+      #run: mvn -B package --file pom.xml
     - run: mkdir staging && cp target/*.jar staging
     - uses: actions/upload-artifact@v2
       with:
