--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -29,8 +29,9 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build Smile
+      run: mvn -B package --file compiere-jasper-eurocenter/pom.xml
+    - name: Build Snaposhot
       run: mvn --batch-mode --update-snapshots verify
-      #run: mvn -B package --file pom.xml
     - run: mkdir staging && cp target/*.jar staging
     - uses: actions/upload-artifact@v2
       with:
