--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -32,7 +32,7 @@ jobs:
       run: mvn -B package --file compiere-jasper-eurocenter/pom.xml
     - name: Build Snaposhot
       run: mvn --file compiere-jasper-eurocenter/pom.xml --batch-mode --update-snapshots verify
-    - run: mkdir staging && cp ../target/*.jar staging
+    - run: mkdir staging && cp ./target/*.jar staging
     - uses: actions/upload-artifact@v2
       with:
         name: Package
