--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -26,17 +26,22 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('compiere-jasper-eurocenter/pom.xml') }}
+        key: ${{ runner.os }}-m2-${{ hashFiles('pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build Smile
-      run: mvn -B package --file compiere-jasper-eurocenter/pom.xml
+      run: mvn -B package --file pom.xml
     - name: Build Snaposhot
-      run: mvn --file compiere-jasper-eurocenter/pom.xml --batch-mode --update-snapshots verify
-    - run: mkdir staging && cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-jasper-eurocenter/target/*.jar staging
+      run: mvn --file pom.xml --batch-mode --update-snapshots verify
+    - run: mkdir downloads && cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-jasper-eurocenter/target/*.jar downloads
+    - run: cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-custo-eurocenter/target/*.jar downloads
+    - run: cp /home/runner/work/compiere-eggo/compiere-eggo/gwtServer-custo-eurocentertarget/*.jar downloads
+    - run: cp /home/runner/work/compiere-eggo/compiere-eggo/fatjar-custo-eurocenter/*.jar downloads
+    - run: cp /home/runner/work/compiere-eggo/compiere-eggo/fatjar-custo-eurocenter-ws/*.jar downloads
+    - run: cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-ws-eurocenter/*.jar downloads
     - uses: actions/upload-artifact@v2
       with:
-        name: compiere-jasper-eurocenter
-        path: staging
+        name: compiere-eggo
+        path: staging/*
 #compiere-custo-eurocenter
 #compiere-jasper-eurocenter
 #gwtServer-custo-eurocenter
