--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -42,7 +42,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: compiere-eggo
-        path: staging/*
+        path: downloads/*
 #compiere-custo-eurocenter
 #compiere-jasper-eurocenter
 #gwtServer-custo-eurocenter
