--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -3,13 +3,12 @@
 
 name: Java CI with Maven
 
-on: 
-#[push]
+on: [push]
 
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+ # push:
+ #   branches: [ main ]
+ # pull_request:
+ #   branches: [ main ]
 env:
   no_version: 361.55.0-SNAPSHOT
 
