--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -40,15 +40,19 @@ jobs:
     - run: cp /home/runner/work/compiere-eggo/compiere-eggo/fatjar-custo-eurocenter/target/fatjar-custo-eurocenter*.jar downloads
     - run: cp /home/runner/work/compiere-eggo/compiere-eggo/fatjar-custo-eurocenter-ws/target/fatjar-custo-eurocenter*.jar downloads
     - run: cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-ws-eurocenter/target/compiere-ws-eurocenter*.war downloads
-    - uses: actions/upload-artifact@v2
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
       with:
-        name: compiere-eggo-${{env.no_version}}
-        path: downloads/*
-#compiere-custo-eurocenter
-#compiere-jasper-eurocenter
-#gwtServer-custo-eurocenter
-#fatjar-custo-eurocenter
-#compiere-ws-eurocenter
+        #repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: downloads/*
+        asset_name: compiere-eggo-${{env.no_version}}
+        tag: compiere-eggo-${{env.no_version}}
+        overwrite: true
+        body: "This is my release text"
+    
+    #- uses: actions/upload-artifact@v2
+    #  with:
+    #    name: compiere-eggo-${{env.no_version}}
+    #    path: downloads/*
 
-#fatjar-custo-eurocenter-ws
 
