--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -31,8 +31,8 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
     - name: Build Smile
       run: mvn -B package --file compiere-jasper-eurocenter/pom.xml
-    - name: Build Snaposhot
-      run: mvn --file pom.xml --batch-mode --update-snapshots verify
+    #- name: Build Snaposhot
+     # run: mvn --file compiere-jasper-eurocenter/pom.xml --batch-mode --update-snapshots verify
     - run: mkdir downloads
     - run: cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-jasper-eurocenter/target/compiere-jasper-eurocenter*.jar downloads
     #- run: cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-custo-eurocenter/target/compiere-custo-eurocenter*.jar downloads
