--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -34,7 +34,7 @@ jobs:
     #- name: Build Snaposhot
      # run: mvn --file compiere-jasper-eurocenter/pom.xml --batch-mode --update-snapshots verify
     - run: mkdir downloads
-    #- run: cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-jasper-eurocenter/target/compiere-jasper-eurocenter*.jar downloads
+    - run: cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-jasper-eurocenter/target/compiere-jasper-eurocenter*.jar downloads
     #- run: cp /home/runner/work/compiere-eggo/compiere-eggo/compiere-custo-eurocenter/target/compiere-custo-eurocenter*.jar downloads
     #- run: cp /home/runner/work/compiere-eggo/compiere-eggo/gwtServer-custo-eurocenter/target/gwtServer-custo-eurocenter*.jar downloads
     #- run: cp /home/runner/work/compiere-eggo/compiere-eggo/fatjar-custo-eurocenter/target/fatjar-custo-eurocenter*.jar downloads
@@ -45,11 +45,12 @@ jobs:
         name: compiere-eggo-${{env.no_version}}
         path: downloads/*
     - name: upload compiere-eggo artifact
+      id: compiere-eggo-${{env.no_version}}
       uses: actions/upload-release-asset@v1
       env:
        GITHUB_TOKEN: ${{ github.token }}
       with:
-       upload_url: ${{ steps.create_release.outputs.upload_url }}
+       upload_url: ${{ steps.compiere-eggo-${{env.no_version}}.outputs.upload_url }}
        asset_path: downloads/compiere-eggo-${{env.no_version}}.zip
        asset_name: compiere-eggo-${{env.no_version}}.zip
        asset_content_type: application/zip
