--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -12,6 +12,7 @@ on: [push]
 
 env:
   no_version: 361.55.0-SNAPSHOT
+  no_v: compiere-eggo-361.55.0-SNAPSHOT
  
 jobs:
   build:
@@ -46,12 +47,12 @@ jobs:
         name: compiere-eggo-${{env.no_version}}
         path: downloads/*
     - name: upload compiere-eggo artifact
-      id: compiere-eggo-${{env.no_version}}
+      id: ${{env.no_v}}
       uses: actions/upload-release-asset@v1
       env:
        GITHUB_TOKEN: ${{ github.token }}
       with:
-       upload_url: ${{ steps.compiere-eggo-${{env.no_version}}.outputs.upload_url }}
+       upload_url: ${{ steps.${{env.no_v}}.outputs.upload_url }}
        asset_path: downloads/compiere-eggo-${{env.no_version}}.zip
        asset_name: compiere-eggo-${{env.no_version}}.zip
        asset_content_type: application/zip
