--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -46,6 +46,9 @@ jobs:
       with:
         name: compiere-eggo-${{env.no_version}}
         path: downloads/*
+    - name: Build project # This would actually build your project, using zip for an example artifact
+      run: |
+          zip -m --junk-paths compiere-eggo-${{env.no_version}} downloads/*
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -63,7 +66,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: compiere-eggo-${{env.no_version}}.zip
+          asset_path: ./compiere-eggo-${{env.no_version}}.zip
           asset_name: compiere-eggo-${{env.no_version}}.zip
           asset_content_type: application/zip
 
