--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -58,7 +58,7 @@ jobs:
           tag_name: ${{ env.no_v }}
           release_name: ${{ env.no_v }}
           draft: true
-          prerelease: true
+          prerelease: false
     - name: Upload Release Asset
       id: upload-release-asset 
       uses: actions/upload-release-asset@v1
